# closeUntrustedTouchEventsAreBlocked

./: CMakeLists.txt  README.md
include/util/: util.h
src/: main.cpp
src/util/: util.cpp
